[project]
name = "shape-warrior-t.algezip"
version = "1.0.0"
description = "A boolean expression manipulation program that uses zippers for navigation."
authors = [
    {name = "Bonan Luan", email = "bl.swt1@gmail.com"},
]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
algezip = "algezip:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"
